--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
+  intl_phone_number_input: ^0.7.1
+  pinput: ^2.2.21
+  firebase_database: ^10.0.9
+  ffi: ^2.0.1
+  sign_in_with_apple: ^4.3.0
+  the_apple_sign_in: ^1.1.1
 
 dev_dependencies:
   flutter_test:
