--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,17 @@ dependencies:
   ffi: ^2.0.1
   sign_in_with_apple: ^4.3.0
   the_apple_sign_in: ^1.1.1
+  kg_charts: ^0.0.4
+  flutter_contacts:
+  url_launcher:
+  sqflite:
+  contacts_service: ^0.6.3
+  permission_handler: 
+  path_provider: any
+  firebase_storage: ^11.0.10
+  image_picker: ^0.8.6
+  flutter_chat_ui: ^1.6.4
+
 
 dev_dependencies:
   flutter_test:
@@ -66,9 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -81,17 +91,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Blankenburg
+      fonts:
+        - asset: fonts/Blankenburg.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
